--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -266,7 +266,7 @@ jobs:
         id: build
         with:
           arch: ppc64le
-          distro: ubuntu20.04
+          distro: ubuntu_devel
           run: |
             mkdir -p build
             cd build && cmake -Wno-dev -DBUILD_DRIVER=OFF ..
