--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -269,7 +269,7 @@ jobs:
           distro: ubuntu_devel
           run: |
             apt update
-            apt install -y g++ linux-headers cmake libelf-dev pkg-config
+            apt install -y g++ linux-headers cmake libelf-dev pkg-config git 
             mkdir -p build
             cd build && cmake -Wno-dev -DBUILD_DRIVER=OFF ..
             cmake --build . --target package --config Release
